# MalBox

./: README.md  test_malware.py  test_network_analyze.py
backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sandbox_manager.py  worker.py
