[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.128.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "rq>=2.6.1",
    "scapy>=2.7.0",
    "uvicorn>=0.40.0",
]
